[package]
  publish = false # NEVER PUBLICLY PUBLISH
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "Paint with Lasers"
  license = "None at the moment"
  name = "paint-with-lasers"
  readme = "README.md"
  repository = "https://github.com/echelon/paint-with-lasers"
  version = "0.0.1"
  #build = "build.rs"

[[bin]]
  name = "paint"

[dependencies]
  camera_capture = "0.3"
  image = "0.7"
  iron = "0.5"
  lase = "0.0.1"
  opencv = "0.2"
  piston-texture = "0.4"
  piston_window = "0.40"
  router = "0.5"
  rscam = "0.5.2"
  serde = "1.0"
  serde_derive = "1.0"
  serde_json = "1.0"

[build-dependencies]
  gcc = "0.3"
  glob = "0.2"
  pkg-config = "0.3"

[dev-dependencies]

