[package]
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "Laser Graffiti"
  license = "None at the moment"
  name = "laser-graffiti"
  readme = "README.md"
  repository = "https://github.com/echelon/laser-graffiti"
  version = "0.1.1"

[[bin]]
  name = "graffiti"

[dependencies]
  argparse = "0.2"
  beam = "0.1"
  camera_capture = "0.3"
  image = "0.7"
  lase = "0.0.1"
  piston = "0.32.0"
  piston-texture = "0.4"
  piston_window = "0.40"
  router = "0.5"
  rscam = "0.5.2"

[build-dependencies]
  gcc = "0.3"
  glob = "0.2"
  pkg-config = "0.3"

[dev-dependencies]

